unpackaged/main/default/objects/Transcript_Evaluation__c/Transcript_Evaluation__c.object-meta.xml
<CustomObject>
    <label>Transcript Evaluation</label>
    <nameField>
        <displayFormat>TE-{00000000}</displayFormat>
        <label>Transcript Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transcript Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>