unpackaged/main/default/objects/Transcript_Evaluation__c/fields/College_Credit_Received_For__c.field-meta.xml
<CustomField>
    <fullName>College_Credit_Received_For__c</fullName>
    <label>College Credit Received For:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>