unpackaged/main/default/objects/Transcript_Evaluation__c/fields/Eligible_Courses__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Courses__c</fullName>
    <label>Eligible Courses</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>