unpackaged/main/default/objects/Transcript_Evaluation__c/fields/Eligible_For_Honors__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Honors__c</fullName>
    <formula>GPA__c &gt;= 3.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible For Honors</label>
    <type>Checkbox</type>
</CustomField>