unpackaged/main/default/objects/Transcript_Evaluation__c/fields/Eligible_To_Take__c.field-meta.xml
<CustomField>
    <fullName>Eligible_To_Take__c</fullName>
    <label>Eligible To Take:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>