unpackaged/main/default/objects/Transcript_Evaluation__c/fields/Enrollment_Record__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment Record</label>
    <referenceTo>Enrollment_Record__c</referenceTo>
    <relationshipLabel>Transcript Evaluations</relationshipLabel>
    <relationshipName>Transcript_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>