unpackaged/main/default/objects/Transcript_Evaluation__c/fields/Ineligible_Courses__c.field-meta.xml
<CustomField>
    <fullName>Ineligible_Courses__c</fullName>
    <label>Ineligible Courses</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>