unpackaged/main/default/objects/Transcript_Evaluation__c/fields/Ineligible_To_Take__c.field-meta.xml
<CustomField>
    <fullName>Ineligible_To_Take__c</fullName>
    <label>Ineligible To Take:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ineligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>