unpackaged/main/default/objects/Transcript_Evaluation__c/fields/Junior_Year_English_Grade__c.field-meta.xml
<CustomField>
    <fullName>Junior_Year_English_Grade__c</fullName>
    <label>Junior Year English Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B- or Higher</fullName>
            </value>
            <value>
                <fullName>C+ or Lower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>