unpackaged/main/default/objects/Transcript_Evaluation__c/fields/Math_Completed__c.field-meta.xml
<CustomField>
    <fullName>Math_Completed__c</fullName>
    <label>Math Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Algebra II</fullName>
            </value>
            <value>
                <fullName>Pre-Calculus</fullName>
            </value>
            <value>
                <fullName>Calculus</fullName>
            </value>
            <value>
                <fullName>Contemporary Math</fullName>
                <isActive>false</isActive>
                <label>Contemporary Math</label>
            </value>
            <value>
                <fullName>Geometry</fullName>
                <isActive>false</isActive>
                <label>Geometry</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Pre-Calculus I</fullName>
                <isActive>false</isActive>
                <label>Pre-Calculus I</label>
            </value>
            <value>
                <fullName>Pre-Calculus II</fullName>
                <isActive>false</isActive>
                <label>Pre-Calculus II</label>
            </value>
            <value>
                <fullName>Trigonometry</fullName>
                <isActive>false</isActive>
                <label>Trigonometry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>