unpackaged/main/default/objects/Transcript_Evaluation__c/fields/Prerequisites_Satisfied_For__c.field-meta.xml
<CustomField>
    <fullName>Prerequisites_Satisfied_For__c</fullName>
    <label>Prerequisites Satisfied For:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>British Literature II</fullName>
            </value>
            <value>
                <fullName>Introductory Spanish II</fullName>
            </value>
            <value>
                <fullName>Intermediate Spanish I</fullName>
            </value>
            <value>
                <fullName>Intermediate Spanish II</fullName>
            </value>
            <value>
                <fullName>Introduction to Biology I</fullName>
            </value>
            <value>
                <fullName>General Chemistry I</fullName>
            </value>
            <value>
                <fullName>Introduction to Statistics</fullName>
            </value>
            <value>
                <fullName>Pre-Calculus I</fullName>
            </value>
            <value>
                <fullName>Calculus I</fullName>
            </value>
            <value>
                <fullName>Principles of Microeconomics</fullName>
            </value>
            <value>
                <fullName>Environmental Science</fullName>
                <isActive>false</isActive>
                <label>Environmental Science</label>
            </value>
            <value>
                <fullName>Rhetoric &amp; Research I</fullName>
                <isActive>false</isActive>
                <label>Rhetoric &amp; Research I</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>