unpackaged/main/default/objects/Transcript_Evaluation__c/fields/Requires_Additional_Review__c.field-meta.xml
<CustomField>
    <fullName>Requires_Additional_Review__c</fullName>
    <label>Requires Additional Review</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AP Test Score(s)</fullName>
            </value>
            <value>
                <fullName>Prior College Credit(s)</fullName>
            </value>
            <value>
                <fullName>Final Transcript</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>