unpackaged/main/default/objects/Transcript_Evaluation__c/fields/Spanish_Completed__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Completed__c</fullName>
    <label>Spanish Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Year</fullName>
            </value>
            <value>
                <fullName>Two Years</fullName>
            </value>
            <value>
                <fullName>Three Years</fullName>
            </value>
            <value>
                <fullName>Four Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>