unpackaged/main/default/objects/Transcript_Evaluation__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transcript Evaluations</relationshipLabel>
    <relationshipName>Transcript_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>