unpackaged/main/default/objects/Transcript_Evaluation__c/fields/Transcript_Type__c.field-meta.xml
<CustomField>
    <fullName>Transcript_Type__c</fullName>
    <label>Transcript Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preliminary</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>