unpackaged/main/default/objects/Transcript_Evaluation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Enrollment_Record__c</columns>
    <columns>Transcript_Type__c</columns>
    <columns>College_Credit_Received_For__c</columns>
    <columns>Eligible_For_Honors__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>